--- a/frontend/repl/package.json
+++ b/frontend/repl/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.2.17",
+    "framer-motion": "^10.16.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.2.1",
