--- a/frontend/repl/package.json
+++ b/frontend/repl/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.2.17",
+    "firebase": "^10.7.0",
     "framer-motion": "^10.16.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.20.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
