--- a/frontend/repl/package.json
+++ b/frontend/repl/package.json
@@ -4,10 +4,12 @@
   "description": "Brown CSCI0320 Sprint 3 Gearup for Fall 2023",
   "license": "UNLICENSED",
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.2.17",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.5",
+    "nodemailer": "^6.9.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.20.0",
